--- a/SoccerBeat/Common/Resource/Localizable.xcstrings
+++ b/SoccerBeat/Common/Resource/Localizable.xcstrings
@@ -90,6 +90,7 @@
       }
     },
     " kcal" : {
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
@@ -156,6 +157,7 @@
       }
     },
     " ml/kg/min" : {
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
@@ -4434,6 +4436,7 @@
       }
     },
     "최대 산소 섭취량" : {
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
@@ -4658,6 +4661,7 @@
       }
     },
     "칼로리" : {
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
