feat: [#411] HealthAlert 추가

--- a/SoccerBeat/Common/Resource/Localizable.xcstrings
+++ b/SoccerBeat/Common/Resource/Localizable.xcstrings
@@ -2743,6 +2743,9 @@
         }
       }
     },
+    "백그라운드 위치(필수): 사용자의 필드 위 위치를 저장하기 위해 사용합니다." : {
+
+    },
     "불편을 드려 죄송합니다. \n\nSoccerBeat의 개발자 계정으로 문의를 주시면 빠른 시일 안에 답변드리겠습니다. " : {
       "localizations" : {
         "en" : {
@@ -3259,6 +3262,9 @@
         }
       }
     },
+    "앱 접근 권한 안내" : {
+
+    },
     "업데이트" : {
       "comment" : "업데이트",
       "extractionState" : "manual",
@@ -3452,6 +3458,9 @@
           }
         }
       }
+    },
+    "위치(필수): 사용자의 필드 위 위치를 저장하기 위해 사용합니다." : {
+
     },
     "은 경기 평균 능력치입니다." : {
       "comment" : "평균 능력치",
@@ -3864,6 +3873,9 @@
           }
         }
       }
+    },
+    "정보 수집을 위해 다음과 같은 접근 권한을 사용하고 있습니다." : {
+
     },
     "정신력" : {
       "comment" : "정신력",
@@ -4802,6 +4814,9 @@
           }
         }
       }
+    },
+    "헬스 정보(필수): 사용자의 경기 데이터를 저장하기 위해 사용합니다." : {
+
     },
     "확인" : {
       "localizations" : {
