--- a/SoccerBeat/Common/Resource/Localizable.xcstrings
+++ b/SoccerBeat/Common/Resource/Localizable.xcstrings
@@ -2744,7 +2744,26 @@
       }
     },
     "백그라운드 위치(필수): 사용자의 필드 위 위치를 저장하기 위해 사용합니다." : {
-
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Background Location (Required): Used to store the user's position on the field."
+          }
+        },
+        "es" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Ubicación en segundo plano (Requerido): Se utiliza para almacenar la posición del usuario en el campo."
+          }
+        },
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "后台位置（必需）: 用于存储用户在场地上的位置。"
+          }
+        }
+      }
     },
     "불편을 드려 죄송합니다. \n\nSoccerBeat의 개발자 계정으로 문의를 주시면 빠른 시일 안에 답변드리겠습니다. " : {
       "localizations" : {
@@ -3263,7 +3282,26 @@
       }
     },
     "앱 접근 권한 안내" : {
-
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "App Access Permissions Guide"
+          }
+        },
+        "es" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Guía de permisos de acceso a la aplicación"
+          }
+        },
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "应用访问权限指南"
+          }
+        }
+      }
     },
     "업데이트" : {
       "comment" : "업데이트",
@@ -3460,7 +3498,26 @@
       }
     },
     "위치(필수): 사용자의 필드 위 위치를 저장하기 위해 사용합니다." : {
-
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Location (Required): Used to store the user's position on the field."
+          }
+        },
+        "es" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Ubicación (Requerido): Se utiliza para almacenar la posición del usuario en el campo."
+          }
+        },
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "位置（必需）: 用于存储用户在场地上的位置。"
+          }
+        }
+      }
     },
     "은 경기 평균 능력치입니다." : {
       "comment" : "평균 능력치",
@@ -3875,7 +3932,26 @@
       }
     },
     "정보 수집을 위해 다음과 같은 접근 권한을 사용하고 있습니다." : {
-
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "The following access permissions are used for data collection."
+          }
+        },
+        "es" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Se utilizan los siguientes permisos de acceso para la recopilación de datos."
+          }
+        },
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "为了收集信息，使用以下访问权限。"
+          }
+        }
+      }
     },
     "정신력" : {
       "comment" : "정신력",
@@ -4816,7 +4892,26 @@
       }
     },
     "헬스 정보(필수): 사용자의 경기 데이터를 저장하기 위해 사용합니다." : {
-
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Health Information (Required): Used to store the user's game data."
+          }
+        },
+        "es" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Información de salud (Requerido): Se utiliza para almacenar los datos de juego del usuario."
+          }
+        },
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "健康信息（必需）: 用于存储用户的比赛数据。"
+          }
+        }
+      }
     },
     "확인" : {
       "localizations" : {
