--- a/SoccerBeat/Common/Resource/Localizable.xcstrings
+++ b/SoccerBeat/Common/Resource/Localizable.xcstrings
@@ -2847,6 +2847,96 @@
         }
       }
     },
+    "사커비트를 사용하기 위해 권한을 설정해주세요." : {
+      "comment" : "NoAuthorizationView Info Button",
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Please enable permissions to use SoccerBeat."
+          }
+        },
+        "es" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Por favor, habilite los permisos para usar SoccerBeat."
+          }
+        },
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "사커비트를 사용하기 위해 권한을 설정해주세요."
+          }
+        },
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "请设置权限以使用SoccerBeat。"
+          }
+        }
+      }
+    },
+    "사커비트의 건강 권한이 없습니다. " : {
+      "comment" : "GuideAuthorizationView Info Button",
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "SoccerBeat does not have health permissions. "
+          }
+        },
+        "es" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "SoccerBeat no tiene permisos de salud."
+          }
+        },
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "사커비트의 건강 권한이 없습니다. "
+          }
+        },
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "SoccerBeat没有健康权限。"
+          }
+        }
+      }
+    },
+    "사커비트의 위치 권한이 없습니다. " : {
+      "comment" : "GuideAuthorizationView Info Button",
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "SoccerBeat does not have location permissions. "
+          }
+        },
+        "es" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "SoccerBeat no tiene permisos de ubicación."
+          }
+        },
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "사커비트의 위치 권한이 없습니다. "
+          }
+        },
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "SoccerBeat没有位置权限。"
+          }
+        }
+      }
+    },
     "삭제 및 재설치를 권장드립니다." : {
       "comment" : "재설치 권장",
       "extractionState" : "manual",
